# BCI_Wheelchair_Shared_Control

./: .gitignore  README.md  requirements-minimal.txt
src/shared_control/: package.xml  setup.py
src/shared_control/launch/: bci_groundtruth_launch.py  bci_integration_launch.py  semi_auto_shared_control_launch.py  static_shared_control_launch.py  with_TCP_server_launch.py
src/shared_control/shared_control/: bci_input_node.py  control_fusion_node.py  groundtruth_input_node.py  manual_control.py  manual_control_node.py  no_input_monitor_node.py  path_eval_node.py  potential_field_planner.py  simple_shared_control.py  simple_shared_control_demo.py  static_shared_control_fusion_node.py  user_input_node.py
