<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shared_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="caroyalqi@gmail.com">Yukai Wang</maintainer>
  <license>TODO: License declaration</license> <!-- 例如：Apache-2.0 -->

  <!-- 构建依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 构建工具 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 执行时依赖 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
